# anjuta-extras

./: AUTHORS  ChangeLog  MAINTAINERS  Makefile  Makefile.am  NEWS  aclocal.m4  anjuta-extras.doap  autogen.sh  configure  configure.ac
help/: Makefile.am
help/C/: scintilla-plugin.page
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/hu/: hu.po
help/pt_BR/: pt_BR.po
help/sv/: sv.po
plugins/: Makefile.am
plugins/class-inheritance/: Makefile  Makefile.am  Makefile.in  class-callbacks.c  class-callbacks.h  class-inherit.c  class-inherit.h  plugin.c  plugin.h
plugins/indent/: Makefile.am  indent-dialog.c  indent-util.c  indent-util.h  indent.ui  plugin.c
plugins/profiler/: Makefile.am  gprof-call-graph-view.c  gprof-call-graph-view.h  gprof-call-graph.c  gprof-call-graph.h  gprof-flat-profile-view.c  gprof-flat-profile-view.h  gprof-flat-profile.c  gprof-flat-profile.h  gprof-function-call-tree-view.c  gprof-function-call-tree-view.h  gprof-options.c  gprof-options.h  gprof-profile-data.c  gprof-view.c  main.c  plugin.c  plugin.h  profiler-call-graph.ui  profiler-flat-profile.ui  profiler-function-call-tree.ui  profiler.ui
plugins/sample1/: Makefile  Makefile.am  Makefile.in  anjuta-sample.plugin
plugins/scintilla/: FilePath.cxx  Makefile.am  PropSetFile.cxx  PropSetFile.h  SString.h  aneditor-indent.cxx  aneditor-priv.h  aneditor.cxx  aneditor.h  anjuta-editor-scintilla.gschema-part.xml  anjuta-editor-scintilla.schemas  anjuta-editor-scintilla.ui  anjuta-editor.plugin  anjuta-scintilla.xml  org.gnome.anjuta.plugins.scintilla.gschema.xml.in  plugin.c  plugin.h  print.c  print.h  properties.cxx  properties.h  style-editor.c  style-editor.h  text-editor-iterable.c  text_editor.c  text_editor.h  text_editor_cbs.c  text_editor_prefs.c
plugins/scintilla/properties/: Makefile  Makefile.in  anjuta.properties  styles.properties
plugins/scintilla/scintilla/: CallTip.cxx  Makefile.am  PlatGTK.cxx  README.sync  ScintillaBase.cxx  ScintillaGTK.cxx  lexers.make  test-scintilla.cxx
plugins/scintilla/scintilla/gtk/: ScintillaGTK.cxx
plugins/scintilla/scintilla/include/: Makefile.am  Makefile.in  Scintilla.h  ScintillaWidget.h
plugins/scintilla/scintilla/patches/: scintilla-64-bit.diff  scintilla-calltip-above.diff  scintilla-pango-always.diff  scintilla-remove-deprecated.diff  scintilla-scroll-mask.diff
plugins/scratchbox/: Makefile  Makefile.am  Makefile.in  anjuta-scratchbox.ui  org.gnome.anjuta.plugins.scratchbox.gschema.xml.in  plugin.c
plugins/valgrind/: Makefile  Makefile.am  Makefile.in  anjuta-valgrind.ui  plugin.c  vggeneralprefs.c
po/: ChangeLog  LINGUAS  POTFILES  POTFILES.in  POTFILES.skip  ar.po  bg.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  gl.po  hu.po  id.po  it.po  ja.po  ko.po  lv.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  th.po  (+4 more)
scripts/: Makefile.am  build-schemas.mk
